fixed navbar, but white space in toggle

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
 * {
   box-sizing: border-box;
 }
@@ -6,6 +8,7 @@ body{
   margin: 0px;
   padding: 0px;  
   background-color: #dee9ed;
+  position: relative;
 }
 ul{
   list-style: none;
@@ -16,51 +19,50 @@ a{
 #main{
   width: 100%;
   height: border-box;
-  background-color: #dee9ed;
-  position: relative;
 }
-nav{
+div#nav-bar a#logo{
+  color: #7ba8b7;
+  font-size: 25px;
+  font-weight: normal;
+}
+div#nav-bar a#lang{
+  color: #7ba8b7;
+  font-size: 13px;
+  padding-top: 10px;
+  font-weight: lighter;
+}
+nav#my-nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-weight: 700;
-  letter-spacing: 2.3px;
+  letter-spacing: 2.4px;
   font-family: Montserrat, sans-serif;
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
-  padding: 10px 50px 10px 50px;
+  padding: 10px 50px;
   background-color: #eff4f6;
   box-shadow: 2px 2px 12px rgba(0,0,0,0.05);
   z-index: 1;
+  backdrop-filter: blur(10px);
 }
-.logo{
-  color: #7ba8b7;
-  font-size: 25px;
-  font-weight: bold;
+ul#menu{
+  margin: auto;
+  padding: 0px;
+  font-weight: 300;
 }
-.lang{
-  color: #7ba8b7;
-  font-size: 13px;
-}
-.menu{
-  display: flex;
-  padding: 10px 20px 0px 0px;
-}
-.menu li a{
+ul#menu li#menu-item a#menu-link{
   color: #518394;
   font-size: 13px;
   padding: 10px 20px;
 }
-.menu li a:hover,
+ul#menu li#menu-item a#menu-link:hover,
 .active{
   background-color: #9cbec9;
   color: #FFFFFF !important;
-  font-weight: 700;
   transition: all ease 0.25s;
 }
-
 
 #about{
   width: 100%;
@@ -70,6 +72,7 @@ nav{
   flex-direction:column;
   margin: auto;
   padding: 0;
+  padding-top: 20px;
 }
 .a-box{
   width: 80%;
